name:              fashionad
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            yhosok
maintainer:        yhosok
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://fashionad.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     ModelTypes
                     Settings
                     Settings.Development
                     Settings.StaticFiles
                     Handler.Root
                     Handler.Coordination
                     Handler.Item
                     Handler.Rating
                     Handler.User
                     Handler.Content
                     Yesod.Form.I18n.Japanese
                     
    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends:

                   base                          >= 4          && < 5
                 -- , yesod-platform                >= 1.1        && < 1.2
                 , yesod                         >= 1.1        
                 , yesod-core                    >= 1.1        
                 , yesod-auth                    >= 1.1        
                 , yesod-static                  >= 1.1        
                 , yesod-default                 >= 1.1        
                 , yesod-form                    >= 1.1        
                 , yesod-test                    >= 0.3        
                 , clientsession                 >= 0.8        
                 , bytestring                    >=0.9.1.4     
                 , text                          >= 0.11
                 , persistent                    >= 1.0        
                 , persistent-sqlite             >= 1.0        
                 , template-haskell
                 --, hamlet                        >= 1.1        
                 --, shakespeare-css               >= 1.0        
                 --, shakespeare-js                >= 1.0        
                 --, shakespeare-text              >= 1.0
                 , shakespeare                   >= 2.0        
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.3        
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 1.5        
                 , directory                     
                 , warp                          >= 1.3        
                 , data-default
                 , gd
                 , blaze-markup
                 , blaze-html
                 , containers
                 , yesod-test
                 , mime-mail                     >= 0.3.0.3    && < 0.5
                 , conduit                       >= 0.5        
                 , monad-logger >= 0.3.6.1
                 , fast-logger >= 2.1.5
                 , wai-logger >= 2.1.1

executable         fashionad
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:
                       base
                     , fashionad
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: 
                   base
                 , fashionad
                 , yesod-test
                 , yesod-default
                 , yesod-core
                 , persistent                    >= 1.0        && < 1.1
                 , persistent-sqlite     >= 1.0        && < 1.1
